@@ -3,6 +3,28 @@
 
 A WYSIWYG-Editor for custom sights for the game "War Thunder" 
 
+*Note: This project is no longer actively developed.*
+
+
+## How to run
+
+This application was written with Java 8 and requires JavaFX. JavaFX is no longer provided with versions 9 or higher or with the OpenJDK. 
+
+**Workaround - Adding JavaFX manually when running**
+
+1. Download JavaFX: https://gluonhq.com/products/javafx/
+
+2. Run the command (This should work with any Java version)
+
+   ```
+   java --module-path pathToJavaFx/lib --add-modules javafx.controls,javafx.fxml -jar pathToWTSightEdit/data/wtedit_application.jar
+   ```
+   
+   Replace "pathToJavaFx" with the path to the downloaded and extracted directory and "pathToWTSightEdit" with the path to the directory with of the "./WTSightEdit.jar".
+   
+
+
+
 
 ![alt text](https://i.imgur.com/rnyTPeB.png)
 https://www.youtube.com/watch?v=bRAGADRql1g
